# Gradius

./: README.md
Gradius/: CMakeLists.txt  main.cpp
Gradius/includes/Actors/: Bullet.h  Enemy.h  IActor.h  Player.h
Gradius/includes/Managers/: BulletManager.h  DisplayManager.h  EnemyManager.h  Game.h  IManager.h  InputManager.h  SpriteManager.h
Gradius/includes/Utils/: Sprite.h  UI.h
Gradius/src/Actors/: Bullet.cpp  Enemy.cpp  Player.cpp
Gradius/src/Managers/: BulletManager.cpp  DisplayManager.cpp  EnemyManager.cpp  Game.cpp  InputManager.cpp  SpriteManager.cpp
Gradius/src/Utils/: Sprite.cpp  UI.cpp
